Deploys/Infra/11-Observability/Prometheus/alert-center/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    alertname: prometheus-alert-center
  name: prometheus-alert-center
  #   namespace: monitoring
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8080"
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
  selector:
    app: prometheus-alert-center
